Change the text

--- a/index.html
+++ b/index.html
@@ -30,13 +30,16 @@
 							<h1>Jonny Blackburn</h1>
 							<p>Ahoy thar! <br/>
 								I'm Jonny a games developer working in Leeds. <br/>
-								I'm a coder, hacker, tinkerer, maker, thinker, gamer, creator, player, dabbler, juggler
-								and adventurer. I've been playing games for as long as I can remember and shortly after that I
-								wanted to make games. On my journey into adult life I've picked up many other interests that keep
-								me busy.
 								<br/><br/>
-								This is only a temporary site that I made during the
+								This is something I put together at the
 								<a href="http://www.summitawesome.co.uk/"> summit awesome hackathon</a>.
+								<br/><br/>
+								Random gif background.
+								<br/><br/>
+								Responsive design.
+								<br/><br/>
+								Live image replacement based on window size.
+								<br/>Try it out resize the window and watch the gif change to a png.
 							</p>
 						</div>
 					</div>
