Trying to change the repo

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 							Responsive design.
 							<br/><br/>
 							Live image replacement based on window size.
-							<br/>Try it out resize the window and watch the gif change to a different image.
+							<br/>
+							Try it out resize the window and watch the gif change to a different image.
 						</p>
 					</div>
 				</div>
